--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
     "uuid": "^10.0.0"
   },
