--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
+    "lucide-react": "^0.428.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "uuid": "^10.0.0"
   },
