--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
+    "react-qr-code": "^2.0.15",
     "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.5",
     "uuid": "^10.0.0"
