Dark Light Mode component added

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "format": "prettier --write \"src/**/*.{js,jsx,css,md}\""
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.428.0",
     "react": "^18.2.0",
